Package reconfiguration and moving of files.

--- a/NodeJs/AtpLiveRankings/views/overview.ejs
+++ b/NodeJs/AtpLiveRankings/views/overview.ejs
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATP Live Ranking Results</title>
+    <!--Temp embedded styles-->
+    <style>
+        
+    </style>
 </head>
 <body>
-    <h1>ATP Live Ranking JSON</h1>
+    <h1>ATP Live Rankings</h1>
     <div>
         
     </div>
