Import statements changed

--- a/NodeJs/AtpLiveRankings/views/overview.ejs
+++ b/NodeJs/AtpLiveRankings/views/overview.ejs
@@ -13,7 +13,18 @@
 <body>
     <h1>ATP Live Rankings</h1>
     <div>
-        
+        <table>
+            <thead>
+                <tr>
+                    <th>#</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
