WIP of using the EJS view engine and passing through the live ranking data (to build a simple table).

--- a/NodeJs/AtpLiveRankings/views/overview.ejs
+++ b/NodeJs/AtpLiveRankings/views/overview.ejs
@@ -7,7 +7,14 @@
     <title>ATP Live Ranking Results</title>
     <!--Temp embedded styles-->
     <style>
-        
+        th {
+            min-width: 175px;
+            text-align: left;
+        }
+
+        tr {
+            min-width: 175px;
+        }
     </style>
 </head>
 <body>
@@ -16,13 +23,23 @@
         <table>
             <thead>
                 <tr>
-                    <th>#</th>
+                    <th>Rank</th>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                    <th>Points</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td></td>
-                </tr>
+                <!-- <% playerData 
+                <!-- <tr>
+                    <td>1</td>
+                    <td>Novak Djokovic</td>
+                    <td>32</td>
+                    <td>SERB</td>
+                    <td>12000</td>
+                </tr> -->
+                <% -->
             </tbody>
         </table>
     </div>
