Some bug fixes and improvements. Trial code in place for using node-cache (hilarious implementation in place for the player profile data - which totally isn't right!). Some abstractions in play to make routing code (res.render) simpler.

--- a/NodeJs/TennisLiveRankings/public/css/site-style.css
+++ b/NodeJs/TennisLiveRankings/public/css/site-style.css
@@ -1,4 +1,5 @@
+/* TODO - full minification */
 body { background-color: rgb(98, 103, 104); font-family: 'Orbitron', sans-serif; }
 h1, h2, p { color: white; }
-a, a:hover { text-decoration: none; }
+a, a:hover, a:focus { text-decoration: none; background-color: transparent; }
 #container { margin: 10px; } .site-detail-text { margin: 20px 0; }
