--- a/src/nodejs/TennisLiveRankings/views/profile.ejs
+++ b/src/nodejs/TennisLiveRankings/views/profile.ejs
@@ -3,71 +3,71 @@
     <div id="container">
         <h1 class="text-center">PLAYER PROFILE</h1>
         <div class="text-center">
-            <a href="/overview" class="text-center btn">
+            <a href="/overview" class="btn">
                 <i class="fa fa-arrow-left" title="Back"></i> 
                 BACK
             </a>
         </div>
         <div class="container text-center">
             <hr />
-            <div class='row text-center' style="margin-bottom: 20px;">
-                <div class="col-md-4 text-center">
-                    <p><strong>RANK</strong></p>
-                    <p class="text-center site-detail-text">
+            <div class="row profile-row">
+                <div class="col-md-4">
+                    <h6>RANK</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.rank %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>NAME</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>NAME</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.name %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>AGE</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>AGE</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.age %>
                     </p>
                 </div>
             </div>
             <hr />
-            <div class='row' style="margin-bottom: 20px;">
+            <div class="row profile-row">
                 <div class="col-md-4">
-                    <p><strong>POINTS</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>POINTS</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.points %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>CURRENT TOURNAMENT</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>CURRENT TOURNAMENT</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.currentTournament %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>PREVIOUS TOURNAMENT</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>PREVIOUS TOURNAMENT</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.previousTournament %>
                     </p>
                 </div>
             </div>
             <hr />
-            <div class='row' style="margin-bottom: 20px;">
+            <div class="row profile-row">
                 <div class="col-md-4">
-                    <p><strong>NEXT POINTS</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>NEXT POINTS</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.nextPoints %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>MAX POINTS</strong></p>
-                    <p class="text-center site-detail-text">
+                    <h6>MAX POINTS</h6>
+                    <p class="site-detail-text">
                         <%= fullPlayerData.maxPoints %>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <p><strong>PROFILE LINK</strong></p>
-                    <p class="text-center site-detail-text">          
+                    <h6>PROFILE LINK</h6>
+                    <p class="site-detail-text">          
                         <a href="<%= fullPlayerData.playerLink %>" target="_blank">GO TO PLAYER PROFILE</a>
                     </p>
                 </div>
