--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Index.cshtml
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Index.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Lorem Ipsum Orchard Module Host</h1>
+    <p>This is a sample application that hosts two different flavours of Lorem Ipsum generation.</p>
+    <p>Use the navigation links above or buttons below to inspect the two different modules at work (JeffSum.Module and HipsterIpsum.Module).</p>
+    <div class="button-grouping">
+        <a class="btn btn-primary" asp-area="JeffSum.Module" asp-controller="Jeff" asp-action="Index">JeffSum.Module</a>
+        <a class="btn btn-primary"asp-area="HipsterIpsum.Module" asp-controller="Hipster" asp-action="Index">HipsterIpsum.Module</a>
+    </div>
 </div>
