--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/wwwroot/css/site.css
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/wwwroot/css/site.css
@@ -69,3 +69,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.button-grouping a {
+    min-width: 250px;
+    margin: 1rem;
+}
