DinoIpsum Module added.
From this point forward I just need to tidy code, further share logic and prep for a full blog post.

--- a/src/csharp/OrchardCore/HipsterIpsum.Module/Views/Hipster/Index.cshtml
+++ b/src/csharp/OrchardCore/HipsterIpsum.Module/Views/Hipster/Index.cshtml
@@ -12,7 +12,7 @@
 <div>
     <h2 class="mb-4">Hipster Ipsum Content</h2>
     <p>If you're looking for some 'Hipster Lorem Ipsum' this is the place to find it. You can find three paragraphs of goodness below, arranged into cards.</p>
-    <p>Data sourced using the <a href="https://hipsum.co/the-api/">Hipster Ipsum</a> API.</p>
+    <p>The data has been sourced using the <a href="https://hipsum.co/the-api/" target="_blank">Hipster Ipsum</a> API.</p>
     <div class="row row-cols-1 row-cols-md-3">
         @foreach (CardViewModel cardViewModel in Model.Cards)
         {
