--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Shared/_Layout.cshtml
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/">Lorem Ipsum Sample Generator</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -27,6 +26,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="JeffSum.Module" asp-controller="Jeff" asp-action="Index">JeffIpsum.Module</a>
                                 <a class="dropdown-item" asp-area="HipsterIpsum.Module" asp-controller="Hipster" asp-action="Index">HipsterIpsum.Module</a>
+                                <a class="dropdown-item" asp-area="DinoIpsum.Module" asp-controller="Dino" asp-action="Index">DinoIpsum.Module</a>
                             </div>
                         </li>
                     </ul>
