--- a/src/csharp/OrchardCore/DinoIpsum/Views/Dino/Index.cshtml
+++ b/src/csharp/OrchardCore/DinoIpsum/Views/Dino/Index.cshtml
@@ -1,5 +1,41 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using DinoIpsum.Module.ViewModels;
+@model DinoIpsumViewModel
 @{
+    ViewData["Title"] = "Dino Ipsum";
 }
+@section Styles {
+    <link rel="stylesheet" href="~/DinoIpsum.Module/css/dino-index.css" />
+}
+<div>
+    <h2 class="mb-4">Dino Ipsum Content</h2>
+    <p>Last but not least, here is some lovely dinosaur-based Lorem Ipsum generated content.</p>
+    <p>The data has been sourced using the <a href="https://dinoipsum.herokuapp.com/" target="_blank">Dino Ipsum</a> API.</p>
+    <div id="DinoCarouselIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            @for (int i = 0; i < @Model.DinoParagraphs.Count; i++)
+            {
+                <li data-target="#DinoCarouselIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : string.Empty)"></li>
+            }
+        </ol>
+        <div class="carousel-inner">
+            @for (int i = 0; i < @Model.DinoParagraphs.Count; i++)
+            {
+                <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
+                    <div class="carousel-text">
+                        <p>
+                            @Model.DinoParagraphs[i]
+                        </p>
+                    </div>
+                </div>
+            }
+        </div>
+        <a class="carousel-control-prev" href="#DinoCarouselIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#DinoCarouselIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
