Main index view wording updated.

--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Index.cshtml
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="text-center">
     <h1 class="display-4">Lorem Ipsum Orchard Module Host</h1>
-    <p>This is a sample application that hosts two different flavours of Lorem Ipsum generation.</p>
+    <p>This is a sample application that hosts three different flavours of Lorem Ipsum generation.</p>
     <p>Use the navigation links above or buttons below to inspect the three different modules at work: JeffSum.Module, HipsterIpsum.Module and DinoIpsum.Module.</p>
     <div class="button-grouping">
         <a class="btn btn-primary" asp-area="JeffSum.Module" asp-controller="Jeff" asp-action="Index">JeffSum.Module</a>
