--- a/src/csharp/OrchardCore/DinoIpsum/Views/Dino/Index.cshtml
+++ b/src/csharp/OrchardCore/DinoIpsum/Views/Dino/Index.cshtml
@@ -7,16 +7,20 @@
     <link rel="stylesheet" href="~/DinoIpsum.Module/css/dino-index.css" />
 }
 <div>
+    <!--Header and text content-->
     <h2 class="mb-4">Dino Ipsum Content</h2>
     <p>Last but not least, here is some lovely dinosaur-based Lorem Ipsum generated content.</p>
     <p>The data has been sourced using the <a href="https://dinoipsum.herokuapp.com/" target="_blank">Dino Ipsum</a> API.</p>
+    <!--Example carousel for Dino Lorem Ipsum content-->
     <div id="DinoCarouselIndicators" class="carousel slide" data-ride="carousel">
+        <!--Carousel navigation indicators-->
         <ol class="carousel-indicators">
             @for (int i = 0; i < @Model.DinoParagraphs.Count; i++)
             {
                 <li data-target="#DinoCarouselIndicators" data-slide-to="@i" class="@(i == 0 ? "active" : string.Empty)"></li>
             }
         </ol>
+        <!--Carousel internal content-->
         <div class="carousel-inner">
             @for (int i = 0; i < @Model.DinoParagraphs.Count; i++)
             {
@@ -29,6 +33,7 @@
                 </div>
             }
         </div>
+        <!--Carousel next and previous button controls-->
         <a class="carousel-control-prev" href="#DinoCarouselIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
