--- a/src/csharp/OrchardCore/DinoIpsum/wwwroot/css/dino-index.css
+++ b/src/csharp/OrchardCore/DinoIpsum/wwwroot/css/dino-index.css
@@ -1,4 +1,5 @@
-﻿.carousel {
+﻿/* Override styles for the 'DinoIpsum.Module' Orchard Module - colour the carousel grey and pad out the text content (for illustration only) */
+.carousel {
     background-color: dimgrey;
     color: white;
     border-radius: 3px;
