--- a/src/csharp/OrchardCore/HipsterIpsum.Module/Views/Hipster/Index.cshtml
+++ b/src/csharp/OrchardCore/HipsterIpsum.Module/Views/Hipster/Index.cshtml
@@ -6,13 +6,12 @@
 @section Styles {
     <link rel="stylesheet" href="~/HipsterIpsum.Module/css/hipster-index.css" />
 }
-@*@section Scripts {
-    <script type="text/javascript" src="~/JeffSum.Module/js/jeff-index.js"></script>
-}*@
 <div>
+    <!--Header and text content-->
     <h2 class="mb-4">Hipster Ipsum Content</h2>
     <p>If you're looking for some 'Hipster Lorem Ipsum' this is the place to find it. You can find three paragraphs of goodness below, arranged into cards.</p>
     <p>The data has been sourced using the <a href="https://hipsum.co/the-api/" target="_blank">Hipster Ipsum</a> API.</p>
+    <!--Card content-->
     <div class="row row-cols-1 row-cols-md-3">
         @foreach (CardViewModel cardViewModel in Model.Cards)
         {
