--- a/src/csharp/OrchardCore/HipsterIpsum.Module/wwwroot/css/hipster-index.css
+++ b/src/csharp/OrchardCore/HipsterIpsum.Module/wwwroot/css/hipster-index.css
@@ -1,3 +1,4 @@
-﻿.card {
+﻿/* Override styles for the 'HipsterIpsum.Module' Orchard Module - focuses just on card styling (for illustration only) */
+.card {
     min-height: 550px;
 }
