--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Shared/_Layout.cshtml
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modules</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <!--Customised links to Orchard Core configured modules-->
                                 <a class="dropdown-item" asp-area="JeffSum.Module" asp-controller="Jeff" asp-action="Index">JeffIpsum.Module</a>
                                 <a class="dropdown-item" asp-area="HipsterIpsum.Module" asp-controller="Hipster" asp-action="Index">HipsterIpsum.Module</a>
                                 <a class="dropdown-item" asp-area="DinoIpsum.Module" asp-controller="Dino" asp-action="Index">DinoIpsum.Module</a>
