--- a/src/csharp/OrchardCore/JeffSum.Module/wwwroot/css/jeff-index.css
+++ b/src/csharp/OrchardCore/JeffSum.Module/wwwroot/css/jeff-index.css
@@ -1,3 +1,4 @@
-﻿.module-button {
+﻿/* Override styles for the 'JeffSum.Module' Orchard Module - contains a consistent style for module buttons (for illustration only) */
+.module-button {
     min-width: 200px;
 }
